--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Yeonjun Kim",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "fs": "0.0.1-security",
     "mongodb": "^3.2.6",
     "slackbots": "^1.2.0"
   }
